@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 0c92090c9d1e077a99b36194277ddc1199582db7 BUGS
-SHA1 407ecc4b4b9624d74248445c089cb767c1a4f6a6 CHANGES
+SHA1 0f633b31e99ea7e67f1067795dc6d8efb57af835 CHANGES
 SHA1 f4f1d6c08424bf7550a95ce6911045a98f69e0a8 CREDITS
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 5841d7b4f2e9e1f235ceb0ae7227cd4d71dc8a17 MANIFEST
@@ -24,18 +24,18 @@ SHA1 41f53216265bfaef39688855e48f91475930e600 TODO
 SHA1 fe7311d4b22922ce4a4e666174c0bf9e359d0ff3 data/courier.bmp
 SHA1 e0d9e2f1ce30653ef538d607479ecf715a478195 examples/font.pl
 SHA1 e6d1f05e5848645470a9a2171744171a43daa2be examples/lib/SDL/App/FPS/MyFont.pm
-SHA1 f68a24b351350f7032a96574a9271b561b12b24f lib/Games/OpenGL/Font/2D.pm
+SHA1 f4bd2e76a1d5654473347ec0c1a9cc18d1c0ec1b lib/Games/OpenGL/Font/2D.pm
 SHA1 1f3aaa713f195953b6b5202dfd4215360c4a2097 t/chars.txt
-SHA1 bbde937b6f08ebef4e1b2c82f0d82d54ca976742 t/font.t
+SHA1 e8084e809ddca1fb0932e92e4d1039567400f717 t/font.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.0.6 (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEUAwUBPpMmbHcLPEOTuEwVAQHYVwf4hyx18KRvouDzdK8kOup4hda5SmvCg+rV
-Bh70yrtxzbx8SDa26rn6KLWO8VnCClTpMJuqtejYKSDFcgr6SW68rO10uZJZAn6n
-ymzHO4c2n0RMzyp/dP2KjcE+/z9HnX/lIZlysjjvAuHae99Ke3utN6GQiAnTUCI+
-/tiqBN8iYSESoneZxqkKm3X0mgCFtBTtCws2FO3dedvi/C234CLBB9TS1BjyAQzF
-szplQS91LpCHsG7vV8IamV2BBGEdZX2/HLGLOSdJm41nbJRwYOj4ldypYJTcxz6P
-eLz6ZQErZkuVQCeTBP3yeD3fbAC0w/dbU9LU0uPegKsXGoI14yo6
-=4e6+
+iQEVAwUBPqv/qHcLPEOTuEwVAQGirAf9GQ6kHm2+QfKLP9ZZ7ff4byc6iVIlNUdL
+2xqnbEWClVKmc9jcSrSMPRl2FRs/eT+ECcMfdQnHFM58ZGlFIhfo1DAIoSgx8fGj
+6cQhXNYbwDc/FG+yys8wur9mLwIGfBFh1Idl/ODDZDHmuncmcSQ1BLzC6CbFw7kH
+beSSoNsqeQDfQNk1sQlN3tyLN0KL7Xar1EBDH8A+5viZse8yoK3QVJ7en1Z3gMAX
+Bi2GsPihJQS4B5D+NVbJFvF/CeT3c68q26XOIO0plgfPkXwLQxGiFTGouXxUVzSh
+IAn/QSHPxWxs9j5DB1URB/qPwxsUAWE3OKp24QiK8yxgiYK5xCmwPA==
+=w1Ed
 -----END PGP SIGNATURE-----
